Showcase the setup in a video embed

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ layout: default
 </div>
 
 {% include how_it_works.html %}
+{% include easy_setup.html %}
 {% include testimonials.html %}
 {% include features.html %}
 {% include cta.html %}
