--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
   </div>
 
   <div x-data="{ menuOpen: false}" class="relative pt-6 pb-16 sm:pb-24">
-    {% include hamburger_menu.html %}
+    {% include nav.html %}
 
     <main class="mt-16 mx-auto max-w-7xl px-4 sm:mt-24">
       <div class="text-center">
