--- a/pricing/index.html
+++ b/pricing/index.html
@@ -30,7 +30,7 @@ title: Pricing
   </div>
 
   <div x-data="{ menuOpen: false }" class="relative pt-6 pb-16 sm:pb-24">
-    {% include hamburger_menu.html %}
+    {% include nav.html %}
 
     <div>
       <div class="pt-12 px-4 sm:px-6 lg:px-8 lg:pt-20">
