--- a/pricing/index.html
+++ b/pricing/index.html
@@ -134,8 +134,8 @@ title: Pricing
                     <div class="mt-10">
                       <div class="rounded-lg shadow-md">
                         <a href="https://console.welcomments.io"
-                           data-plausible-event-name="Start Yearly Subscription"
-                           class="plausible-link block w-full text-center rounded-lg border border-transparent bg-indigo-600 px-6 py-4 text-xl leading-6 font-medium text-white hover:bg-indigo-700"
+
+                           class="block w-full text-center rounded-lg border border-transparent bg-indigo-600 px-6 py-4 text-xl leading-6 font-medium text-white hover:bg-indigo-700"
                            aria-describedby="tier-growth">
                           Free in beta - get started
                         </a>
@@ -190,8 +190,8 @@ title: Pricing
                       <div class="mt-8">
                         <div class="rounded-lg shadow-md">
                           <a href="https://console.welcomments.io"
-                             data-plausible-event-name="Start Monthly Subscription"
-                             class="plausible-link block w-full text-center rounded-lg border border-transparent bg-white px-6 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50"
+
+                             class="block w-full text-center rounded-lg border border-transparent bg-white px-6 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50"
                              aria-describedby="tier-scale">
                             Free in beta - get started
                           </a>
