Add a statistics widget

--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@ layout: default
 {% include easy_setup.html %}
 {% include testimonials.html %}
 {% include features.html %}
+{% include statistics.html %}
 {% include cta.html %}
 {% include footer.html %}
