--- a/pricing/index.html
+++ b/pricing/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Pricing
 ---
-<div class="relative  overflow-hidden">
+<div class="relative overflow-hidden">
   <div class="hidden sm:block sm:absolute sm:inset-y-0 sm:h-full sm:w-full" aria-hidden="true">
     <div class="relative h-full max-w-7xl mx-auto">
       <svg class="absolute right-full transform translate-y-1/4 translate-x-1/4 lg:translate-x-1/2" width="404"
@@ -10,7 +10,7 @@ title: Pricing
         <defs>
           <pattern id="f210dbf6-a58d-4871-961e-36d5016a0f49" x="0" y="0" width="20" height="20"
                    patternUnits="userSpaceOnUse">
-            <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"/>
+            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor"/>
           </pattern>
         </defs>
         <rect width="404" height="784" fill="url(#f210dbf6-a58d-4871-961e-36d5016a0f49)"/>
@@ -21,7 +21,7 @@ title: Pricing
         <defs>
           <pattern id="5d0dd344-b041-4d26-bec4-8d33ea57ec9b" x="0" y="0" width="20" height="20"
                    patternUnits="userSpaceOnUse">
-            <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"/>
+            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor"/>
           </pattern>
         </defs>
         <rect width="404" height="784" fill="url(#5d0dd344-b041-4d26-bec4-8d33ea57ec9b)"/>
@@ -36,8 +36,8 @@ title: Pricing
       <div class="pt-12 px-4 sm:px-6 lg:px-8 lg:pt-20">
         <div class="text-center">
           <div class="sm:flex sm:flex-col sm:align-center">
-            <h1 class="text-5xl font-extrabold text-gray-900 sm:text-center">Pricing Plans</h1>
-            <p class="mt-5 text-xl text-gray-500 sm:text-center max-w-lg mx-auto">Because the other option to keep this
+            <h1 class="text-5xl font-extrabold text-gray-900 dark:text-gray-100 sm:text-center">Pricing Plans</h1>
+            <p class="mt-5 text-xl text-gray-500 dark:text-gray-400 sm:text-center max-w-lg mx-auto">Because the other option to keep this
               profitable was to make
               money by data mining, but we gave up after Python started complaining about our indentation style.</p>
           </div>
@@ -51,33 +51,33 @@ title: Pricing
               <div
                 class="mt-10 max-w-lg mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-start-2 lg:col-end-5 lg:row-start-1 lg:row-end-4">
                 <div class="relative z-10 rounded-lg shadow-xl">
-                  <div class="pointer-events-none absolute inset-0 rounded-lg border-2 border-indigo-600"
+                  <div class="pointer-events-none absolute inset-0 rounded-lg border-2 border-indigo-600 dark:border-gray-750"
                        aria-hidden="true"></div>
                   <div class="absolute inset-x-0 top-0 transform translate-y-px">
                     <div class="flex justify-center transform -translate-y-1/2">
                   <span
-                    class="inline-flex rounded-full bg-indigo-600 px-4 py-1 text-sm font-semibold tracking-wider uppercase text-white">
+                    class="inline-flex rounded-full bg-indigo-600 dark:bg-gray-750 px-4 py-1 text-sm font-semibold tracking-wider uppercase text-white">
                     Best value
                   </span>
                     </div>
                   </div>
-                  <div class="bg-white rounded-t-lg px-6 pt-12 pb-10">
+                  <div class="bg-white dark:bg-gray-700 rounded-t-lg px-6 pt-12 pb-10">
                     <div>
-                      <h3 class="text-center text-3xl font-semibold text-gray-900 sm:-mx-6" id="tier-growth">
+                      <h3 class="text-center text-3xl font-semibold text-gray-900 dark:text-gray-50 sm:-mx-6" id="tier-growth">
                         Yearly
                       </h3>
                       <div class="mt-4 flex items-center justify-center">
-                    <span class="px-3 flex items-start text-6xl tracking-tight text-gray-900 sm:text-6xl">
+                    <span class="px-3 flex items-start text-6xl tracking-tight text-gray-900 dark:text-gray-50 sm:text-6xl">
                       <span class="mt-2 mr-2 text-4xl font-medium">$</span>
                       <span class="font-extrabold">4</span>
                     </span>
-                        <span class="text-2xl font-medium text-gray-500">/month</span>
+                        <span class="text-2xl font-medium text-gray-500 dark:text-gray-400">/month</span>
                       </div>
-                      <div class="mt-2 text-center text-gray-500 text-sm">$48 annually.
+                      <div class="mt-2 text-center text-gray-500 dark:text-gray-400 text-sm">$48 annually.
                       </div>
                     </div>
                   </div>
-                  <div class="border-t-2 border-gray-100 rounded-b-lg pt-10 pb-8 px-6 bg-gray-50 sm:px-10 sm:py-10">
+                  <div class="border-t-2 border-gray-100 dark:border-gray-750 rounded-b-lg pt-10 pb-8 px-6 bg-gray-50 dark:bg-gray-750 sm:px-10 sm:py-10">
                     <ul class="space-y-4">
                       <li class="flex items-start">
                         <div class="flex-shrink-0">
@@ -87,7 +87,7 @@ title: Pricing
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
                           </svg>
                         </div>
-                        <p class="ml-3 text-base font-medium text-gray-500">
+                        <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
                           Unlimited websites
                         </p>
                       </li>
@@ -100,7 +100,7 @@ title: Pricing
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
                           </svg>
                         </div>
-                        <p class="ml-3 text-base font-medium text-gray-500">
+                        <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
                           Strong automatic spam prevention
                         </p>
                       </li>
@@ -113,7 +113,7 @@ title: Pricing
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
                           </svg>
                         </div>
-                        <p class="ml-3 text-base font-medium text-gray-500">
+                        <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
                           Manual comment moderation support
                         </p>
                       </li>
@@ -126,7 +126,7 @@ title: Pricing
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
                           </svg>
                         </div>
-                        <p class="ml-3 text-base font-medium text-gray-500">
+                        <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
                           Email notifications
                         </p>
                       </li>
@@ -139,7 +139,7 @@ title: Pricing
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
                           </svg>
                         </div>
-                        <p class="ml-3 text-base font-medium text-gray-500">
+                        <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
                           All upcoming features
                         </p>
                       </li>
@@ -160,15 +160,15 @@ title: Pricing
               <div
                 class="mt-10 mx-auto max-w-md lg:m-0 lg:max-w-none lg:col-start-5 lg:col-end-7 lg:row-start-2 lg:row-end-3">
                 <div
-                  class="flex flex-col rounded-lg shadow-lg border overflow-hidden lg:rounded-none lg:rounded-r-lg">
+                  class="flex flex-col rounded-lg shadow-lg border dark:border-gray-800 overflow-hidden lg:rounded-none lg:rounded-r-lg">
                   <div class="flex flex-col">
-                    <div class="bg-white px-6 py-10">
+                    <div class="bg-white dark:bg-gray-700 px-6 py-10">
                       <div>
-                        <h3 class="text-center text-2xl font-medium text-gray-900" id="tier-scale">
+                        <h3 class="text-center text-2xl font-medium text-gray-900 dark:text-gray-50" id="tier-scale">
                           Monthly
                         </h3>
                         <div class="mt-4 flex items-center justify-center">
-                      <span class="px-3 flex items-start text-6xl tracking-tight text-gray-900">
+                      <span class="px-3 flex items-start text-6xl tracking-tight text-gray-900 dark:text-gray-200">
                         <span class="mt-2 mr-2 text-4xl font-medium">
                           $
                         </span>
@@ -176,16 +176,15 @@ title: Pricing
                           6
                         </span>
                       </span>
-                          <span class="text-xl font-medium text-gray-500">
+                          <span class="text-xl font-medium text-gray-500 dark:text-gray-400">
                         /month
                       </span>
                         </div>
-                        <div class="mt-2 text-center text-gray-500 text-sm">$72 annually.
+                        <div class="mt-2 text-center text-gray-500 dark:text-gray-400 text-sm">$72 annually.
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="flex-1 flex flex-col justify-between border-t-2 border-gray-100 p-6 bg-gray-50 sm:p-10 lg:p-6 xl:p-10">
+                    <div class="flex-1 flex flex-col justify-between border-t-2 border-gray-100 dark:border-gray-750 p-6 bg-gray-50 dark:bg-gray-750 sm:p-10 lg:p-6 xl:p-10">
                       <ul class="space-y-4">
                         <li class="flex items-start">
                           <div class="flex-shrink-0">
@@ -195,7 +194,7 @@ title: Pricing
                               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
                             </svg>
                           </div>
-                          <p class="ml-3 text-base font-medium text-gray-500">
+                          <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
                             All features in Yearly
                           </p>
                         </li>
@@ -203,8 +202,7 @@ title: Pricing
                       <div class="mt-8">
                         <div class="rounded-lg shadow-md">
                           <a href="https://console.welcomments.io"
-
-                             class="block w-full text-center rounded-lg border border-transparent bg-white px-6 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50"
+                             class="block w-full text-center rounded-lg border border-transparent bg-white dark:bg-gray-700 dark:hover:bg-gray-900 px-6 py-3 text-base font-medium text-indigo-600 dark:text-gray-100 hover:bg-gray-50"
                              aria-describedby="tier-scale">
                             Free in beta - get started
                           </a>
@@ -218,8 +216,8 @@ title: Pricing
           </div>
         </div>
       </div>
-      <div class="text-center max-w-2xl mx-auto px-4 text-gray-500 text-sm">
-        *Are you expecting more than 500+ comments a month? <a href="mailto:hello@welcomments.io" class="text-blue-500">Talk to us!</a>
+      <div class="text-center max-w-2xl mx-auto px-4 text-gray-300 text-sm">
+        *Are you expecting more than 500+ comments a month? <a href="mailto:hello@welcomments.io" class="text-blue-500 dark:text-blue-400">Talk to us!</a>
       </div>
     </div>
 
