--- a/pricing/index.html
+++ b/pricing/index.html
@@ -146,7 +146,7 @@ title: Pricing
                     </ul>
                     <div class="mt-10">
                       <div class="rounded-lg shadow-md">
-                        <a href="https://console.welcomments.io"
+                        <a href="https://app.welcomments.io"
 
                            class="block w-full text-center rounded-lg border border-transparent bg-indigo-600 px-6 py-4 text-xl leading-6 font-medium text-white hover:bg-indigo-700"
                            aria-describedby="tier-growth">
@@ -201,7 +201,7 @@ title: Pricing
                       </ul>
                       <div class="mt-8">
                         <div class="rounded-lg shadow-md">
-                          <a href="https://console.welcomments.io"
+                          <a href="https://app.welcomments.io"
                              class="block w-full text-center rounded-lg border border-transparent bg-white dark:bg-gray-700 dark:hover:bg-gray-900 px-6 py-3 text-base font-medium text-indigo-600 dark:text-gray-100 hover:bg-gray-50"
                              aria-describedby="tier-scale">
                             Free in beta - get started
