Use console for now!

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@ layout: default
   <div class="hidden sm:block sm:absolute sm:inset-y-0 sm:h-full sm:w-full" aria-hidden="true">
     <div class="relative h-full max-w-7xl mx-auto">
       <svg class="absolute right-full transform translate-y-1/4 translate-x-1/4 lg:translate-x-1/2" width="404"
-           height="784" fill="none" viewBox="0 0 404 784">
+        height="784" fill="none" viewBox="0 0 404 784">
         <defs>
           <pattern id="f210dbf6-a58d-4871-961e-36d5016a0f49" x="0" y="0" width="20" height="20"
-                   patternUnits="userSpaceOnUse">
-            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor"/>
+            patternUnits="userSpaceOnUse">
+            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor" />
           </pattern>
         </defs>
-        <rect width="404" height="784" fill="url(#f210dbf6-a58d-4871-961e-36d5016a0f49)"/>
+        <rect width="404" height="784" fill="url(#f210dbf6-a58d-4871-961e-36d5016a0f49)" />
       </svg>
       <svg
         class="absolute left-full transform -translate-y-3/4 -translate-x-1/4 md:-translate-y-1/2 lg:-translate-x-1/2"
         width="404" height="784" fill="none" viewBox="0 0 404 784">
         <defs>
           <pattern id="5d0dd344-b041-4d26-bec4-8d33ea57ec9b" x="0" y="0" width="20" height="20"
-                   patternUnits="userSpaceOnUse">
-            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor"/>
+            patternUnits="userSpaceOnUse">
+            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor" />
           </pattern>
         </defs>
-        <rect width="404" height="784" fill="url(#5d0dd344-b041-4d26-bec4-8d33ea57ec9b)"/>
+        <rect width="404" height="784" fill="url(#5d0dd344-b041-4d26-bec4-8d33ea57ec9b)" />
       </svg>
     </div>
   </div>
@@ -38,19 +38,21 @@ layout: default
           <span class="block xl:inline">Static comments for</span>
           <span class="block text-indigo-600 xl:inline">static websites.</span>
         </h1>
-        <p class="mt-3 max-w-md mx-auto text-base text-gray-500 dark:text-gray-400 sm:text-lg md:mt-5 md:text-xl md:max-w-xl xl:max-w-3xl">
+        <p
+          class="mt-3 max-w-md mx-auto text-base text-gray-500 dark:text-gray-400 sm:text-lg md:mt-5 md:text-xl md:max-w-xl xl:max-w-3xl">
           You chose JAMStack because pre-rendered HTML makes things simple, scalable, fast, and
           SEO-friendly. It's time to start treating comment sections the same way.
         </p>
         <div class="mt-5 max-w-md mx-auto sm:flex sm:justify-center md:mt-8">
           <div class="rounded-md shadow">
-            <a href="https://app.welcomments.io/"
-               class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800 md:py-4 md:text-lg md:px-10">
+            <a href="https://console.welcomments.io/"
+              class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800 md:py-4 md:text-lg md:px-10">
               Get started
             </a>
           </div>
           <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-            <a href="/blog/april-2021-recap#welcomments__container" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 dark:text-indigo-300 bg-white dark:bg-gray-725 hover:bg-gray-50 dark:hover:bg-gray-750 md:py-4 md:text-lg md:px-10">
+            <a href="/blog/april-2021-recap#welcomments__container"
+              class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 dark:text-indigo-300 bg-white dark:bg-gray-725 hover:bg-gray-50 dark:hover:bg-gray-750 md:py-4 md:text-lg md:px-10">
               Live demo
             </a>
           </div>
