--- a/pricing/index.html
+++ b/pricing/index.html
@@ -6,25 +6,25 @@ title: Pricing
   <div class="hidden sm:block sm:absolute sm:inset-y-0 sm:h-full sm:w-full" aria-hidden="true">
     <div class="relative h-full max-w-7xl mx-auto">
       <svg class="absolute right-full transform translate-y-1/4 translate-x-1/4 lg:translate-x-1/2" width="404"
-           height="784" fill="none" viewBox="0 0 404 784">
+        height="784" fill="none" viewBox="0 0 404 784">
         <defs>
           <pattern id="f210dbf6-a58d-4871-961e-36d5016a0f49" x="0" y="0" width="20" height="20"
-                   patternUnits="userSpaceOnUse">
-            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor"/>
+            patternUnits="userSpaceOnUse">
+            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor" />
           </pattern>
         </defs>
-        <rect width="404" height="784" fill="url(#f210dbf6-a58d-4871-961e-36d5016a0f49)"/>
+        <rect width="404" height="784" fill="url(#f210dbf6-a58d-4871-961e-36d5016a0f49)" />
       </svg>
       <svg
         class="absolute left-full transform -translate-y-3/4 -translate-x-1/4 md:-translate-y-1/2 lg:-translate-x-1/2"
         width="404" height="784" fill="none" viewBox="0 0 404 784">
         <defs>
           <pattern id="5d0dd344-b041-4d26-bec4-8d33ea57ec9b" x="0" y="0" width="20" height="20"
-                   patternUnits="userSpaceOnUse">
-            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor"/>
+            patternUnits="userSpaceOnUse">
+            <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-700" fill="currentColor" />
           </pattern>
         </defs>
-        <rect width="404" height="784" fill="url(#5d0dd344-b041-4d26-bec4-8d33ea57ec9b)"/>
+        <rect width="404" height="784" fill="url(#5d0dd344-b041-4d26-bec4-8d33ea57ec9b)" />
       </svg>
     </div>
   </div>
@@ -37,7 +37,8 @@ title: Pricing
         <div class="text-center">
           <div class="sm:flex sm:flex-col sm:align-center">
             <h1 class="text-5xl font-extrabold text-gray-900 dark:text-gray-100 sm:text-center">Pricing Plans</h1>
-            <p class="mt-5 text-xl text-gray-500 dark:text-gray-400 sm:text-center max-w-lg mx-auto">Because the other option to keep this
+            <p class="mt-5 text-xl text-gray-500 dark:text-gray-400 sm:text-center max-w-lg mx-auto">Because the other
+              option to keep this
               profitable was to make
               money by data mining, but we gave up after Python started complaining about our indentation style.</p>
           </div>
@@ -51,40 +52,44 @@ title: Pricing
               <div
                 class="mt-10 max-w-lg mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-start-2 lg:col-end-5 lg:row-start-1 lg:row-end-4">
                 <div class="relative z-10 rounded-lg shadow-xl">
-                  <div class="pointer-events-none absolute inset-0 rounded-lg border-2 border-indigo-600 dark:border-gray-750"
-                       aria-hidden="true"></div>
+                  <div
+                    class="pointer-events-none absolute inset-0 rounded-lg border-2 border-indigo-600 dark:border-gray-750"
+                    aria-hidden="true"></div>
                   <div class="absolute inset-x-0 top-0 transform translate-y-px">
                     <div class="flex justify-center transform -translate-y-1/2">
-                  <span
-                    class="inline-flex rounded-full bg-indigo-600 dark:bg-gray-750 px-4 py-1 text-sm font-semibold tracking-wider uppercase text-white">
-                    Best value
-                  </span>
+                      <span
+                        class="inline-flex rounded-full bg-indigo-600 dark:bg-gray-750 px-4 py-1 text-sm font-semibold tracking-wider uppercase text-white">
+                        Best value
+                      </span>
                     </div>
                   </div>
                   <div class="bg-white dark:bg-gray-700 rounded-t-lg px-6 pt-12 pb-10">
                     <div>
-                      <h3 class="text-center text-3xl font-semibold text-gray-900 dark:text-gray-50 sm:-mx-6" id="tier-growth">
+                      <h3 class="text-center text-3xl font-semibold text-gray-900 dark:text-gray-50 sm:-mx-6"
+                        id="tier-growth">
                         Yearly
                       </h3>
                       <div class="mt-4 flex items-center justify-center">
-                    <span class="px-3 flex items-start text-6xl tracking-tight text-gray-900 dark:text-gray-50 sm:text-6xl">
-                      <span class="mt-2 mr-2 text-4xl font-medium">$</span>
-                      <span class="font-extrabold">4</span>
-                    </span>
+                        <span
+                          class="px-3 flex items-start text-6xl tracking-tight text-gray-900 dark:text-gray-50 sm:text-6xl">
+                          <span class="mt-2 mr-2 text-4xl font-medium">$</span>
+                          <span class="font-extrabold">4</span>
+                        </span>
                         <span class="text-2xl font-medium text-gray-500 dark:text-gray-400">/month</span>
                       </div>
                       <div class="mt-2 text-center text-gray-500 dark:text-gray-400 text-sm">$48 annually.
                       </div>
                     </div>
                   </div>
-                  <div class="border-t-2 border-gray-100 dark:border-gray-750 rounded-b-lg pt-10 pb-8 px-6 bg-gray-50 dark:bg-gray-750 sm:px-10 sm:py-10">
+                  <div
+                    class="border-t-2 border-gray-100 dark:border-gray-750 rounded-b-lg pt-10 pb-8 px-6 bg-gray-50 dark:bg-gray-750 sm:px-10 sm:py-10">
                     <ul class="space-y-4">
                       <li class="flex items-start">
                         <div class="flex-shrink-0">
                           <!-- Heroicon name: outline/check -->
                           <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                               fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                           </svg>
                         </div>
                         <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
@@ -96,8 +101,8 @@ title: Pricing
                         <div class="flex-shrink-0">
                           <!-- Heroicon name: outline/check -->
                           <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                               fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                           </svg>
                         </div>
                         <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
@@ -109,8 +114,8 @@ title: Pricing
                         <div class="flex-shrink-0">
                           <!-- Heroicon name: outline/check -->
                           <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                               fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                           </svg>
                         </div>
                         <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
@@ -122,8 +127,8 @@ title: Pricing
                         <div class="flex-shrink-0">
                           <!-- Heroicon name: outline/check -->
                           <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                               fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                           </svg>
                         </div>
                         <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
@@ -135,8 +140,8 @@ title: Pricing
                         <div class="flex-shrink-0">
                           <!-- Heroicon name: outline/check -->
                           <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                               fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                           </svg>
                         </div>
                         <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
@@ -146,10 +151,9 @@ title: Pricing
                     </ul>
                     <div class="mt-10">
                       <div class="rounded-lg shadow-md">
-                        <a href="https://app.welcomments.io"
-
-                           class="block w-full text-center rounded-lg border border-transparent bg-indigo-600 px-6 py-4 text-xl leading-6 font-medium text-white hover:bg-indigo-700"
-                           aria-describedby="tier-growth">
+                        <a href="https://console.welcomments.io"
+                          class="block w-full text-center rounded-lg border border-transparent bg-indigo-600 px-6 py-4 text-xl leading-6 font-medium text-white hover:bg-indigo-700"
+                          aria-describedby="tier-growth">
                           Free in beta - get started
                         </a>
                       </div>
@@ -168,30 +172,32 @@ title: Pricing
                           Monthly
                         </h3>
                         <div class="mt-4 flex items-center justify-center">
-                      <span class="px-3 flex items-start text-6xl tracking-tight text-gray-900 dark:text-gray-200">
-                        <span class="mt-2 mr-2 text-4xl font-medium">
-                          $
-                        </span>
-                        <span class="font-extrabold">
-                          6
-                        </span>
-                      </span>
+                          <span class="px-3 flex items-start text-6xl tracking-tight text-gray-900 dark:text-gray-200">
+                            <span class="mt-2 mr-2 text-4xl font-medium">
+                              $
+                            </span>
+                            <span class="font-extrabold">
+                              6
+                            </span>
+                          </span>
                           <span class="text-xl font-medium text-gray-500 dark:text-gray-400">
-                        /month
-                      </span>
+                            /month
+                          </span>
                         </div>
                         <div class="mt-2 text-center text-gray-500 dark:text-gray-400 text-sm">$72 annually.
                         </div>
                       </div>
                     </div>
-                    <div class="flex-1 flex flex-col justify-between border-t-2 border-gray-100 dark:border-gray-750 p-6 bg-gray-50 dark:bg-gray-750 sm:p-10 lg:p-6 xl:p-10">
+                    <div
+                      class="flex-1 flex flex-col justify-between border-t-2 border-gray-100 dark:border-gray-750 p-6 bg-gray-50 dark:bg-gray-750 sm:p-10 lg:p-6 xl:p-10">
                       <ul class="space-y-4">
                         <li class="flex items-start">
                           <div class="flex-shrink-0">
                             <!-- Heroicon name: outline/check -->
                             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                                 fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                              fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M5 13l4 4L19 7" />
                             </svg>
                           </div>
                           <p class="ml-3 text-base font-medium text-gray-500 dark:text-gray-300">
@@ -201,9 +207,9 @@ title: Pricing
                       </ul>
                       <div class="mt-8">
                         <div class="rounded-lg shadow-md">
-                          <a href="https://app.welcomments.io"
-                             class="block w-full text-center rounded-lg border border-transparent bg-white dark:bg-gray-700 dark:hover:bg-gray-900 px-6 py-3 text-base font-medium text-indigo-600 dark:text-gray-100 hover:bg-gray-50"
-                             aria-describedby="tier-scale">
+                          <a href="https://console.welcomments.io"
+                            class="block w-full text-center rounded-lg border border-transparent bg-white dark:bg-gray-700 dark:hover:bg-gray-900 px-6 py-3 text-base font-medium text-indigo-600 dark:text-gray-100 hover:bg-gray-50"
+                            aria-describedby="tier-scale">
                             Free in beta - get started
                           </a>
                         </div>
@@ -217,7 +223,8 @@ title: Pricing
         </div>
       </div>
       <div class="text-center max-w-2xl mx-auto px-4 text-gray-300 text-sm">
-        *Are you expecting more than 500+ comments a month? <a href="mailto:hello@welcomments.io" class="text-blue-500 dark:text-blue-400">Talk to us!</a>
+        *Are you expecting more than 500+ comments a month? <a href="mailto:hello@welcomments.io"
+          class="text-blue-500 dark:text-blue-400">Talk to us!</a>
       </div>
     </div>
 
