--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
         </p>
         <div class="mt-5 max-w-md mx-auto sm:flex sm:justify-center md:mt-8">
           <div class="rounded-md shadow">
-            <a href="https://console.welcomments.io/"
+            <a href="https://app.welcomments.io/"
               class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800 md:py-4 md:text-lg md:px-10">
               Get started
             </a>
