update live demo link in main page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
             </a>
           </div>
           <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-            <a href="/blog/april-2021-recap#welcomments__container"
+            <a href="/blog/november-2021-update#welcomments__container"
               class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 dark:text-indigo-300 bg-white dark:bg-gray-725 hover:bg-gray-50 dark:hover:bg-gray-750 md:py-4 md:text-lg md:px-10">
               Live demo
             </a>
